# pydotthz

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  example.py  pyproject.toml  requirements.txt
.github/: format.yml  publish.yml
.github/workflows/: format.yml  publish.yml  tests.yml
examples/: 01_create_basic_thz.py  02_append_measurement.py  03_thz_image.py
pydotthz/: __init__.py  pydotthz.py
src/: dotthz.py
test_files/: test_gui.thz  test_image.thz
tests/: test_dotthz.py
tests/test_files/: 2_VariableTemperature.thz  PVDF_520um.thz  test_image.thz
