[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydotthz"
version = "0.1.1"
authors = [
  { name="Linus Leo Stöckli", email="linus.stoeckli@unibe.ch" },
]
description = "This Python Package allows interfacing with dotThz files."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
#    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "h5py",
]
[project.urls]
"Homepage" = "http://github.com"
"Bug Tracker" = "http://github.com"